--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -37,6 +37,15 @@
         android:id="@+id/password"
         android:layout_below="@+id/username"
         android:layout_alignParentEnd="true" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textColor="#ffff0100"
+        android:textSize="20dp"
+        android:id="@+id/status"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_gravity="center" />
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
