--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -11,6 +11,11 @@
     android:orderInCategory="100"
     android:showAsAction="never" />
 
+    <item android:id="@+id/action_admin_login"
+    android:title="@string/action_admin_login"
+    android:orderInCategory="100"
+    android:showAsAction="never" />
+
     <item android:id="@+id/action_logout"
         android:title="@string/action_logout"
         android:orderInCategory="100"
