--- a/app/src/main/res/layout/activity_addmember.xml
+++ b/app/src/main/res/layout/activity_addmember.xml
@@ -7,11 +7,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="moonblade.bloodbankcet.addmember">
-
     <TextView
         android:text="ADD NEW ENTRY"
         android:gravity="center"
-
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -54,6 +52,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/etdbjoin"
                 android:hint="Join Year"
+                android:inputType="number"
                 android:ems="10"
                 android:layout_gravity="center_horizontal" />
 
